	- Fixed protection
  - Modmakers:
	- Rewards json array name changed from "rewardMethods" to "rewards"
	- Added totalProtection default value for the player
	  - Stores minimum protection
	- Added maxProtection default value for the player
	- Fixes:
	  - Kills were not increased upon killing an enemy
	  - max durability was not loaded from mods correctly
  - Vanilla TextFighter:
    - Additions:
      - Added the shield tool
	    - Blocks your enemy's next attack
	    - Crafted at the forge for 25 metal scraps and 15 wood
		- One durability is used each time the shield is used
	- Changes:
	  - Kills are now shown in the player stats interface
	  - Armor protection amounts decreased: 
	    - Helmet: 7%
		- Chestplate: 15%
		- Gloves: 3%
		- Leggings: 10%
		- Boots: 5%
	  - Increased experience requirement to level up
	    - New formula: level^2 * 100
    - Fixes:
      - Rewards were not given when killing the lumberjack
      - No reward string was displayed for coins and experience when miner is killed
      - Lumberjack guide does not say that axe can be dropped
      - Executioner enemy guide has typo
      - sorcerer magic drop required a special item that did not exist (“manapouch”)
      - Fixed various guide and game text typos
      - Reduced coin and experience reward of most enemies
	  - Error upon using the `woodaxe` choice in the forest location (which caused axe durability to be unchanged)
      - Many of the enemies did not give rewards when killed
	  - The leaf disguise could not be crafted in the crafting hut
	  - Total protection from armor and other items is now shown in player stats interface

Release v1.3.2
  - Modmakers:
    - Achievement rewards can now have requirements
    - The fists weapon is now not duplicated (which caused it to show multiple times in various places)
    - Added Vanilla Custom variable “priceAtWeaponSmith” to weapons
    - Added custom variable “canBeBoughtAtWeaponsmith” to weapons
  - Vanilla TextFighter: